force-app/main/default/objects/Sales_Trips__c/Sales_Trips__c.object-meta.xml
<CustomObject>
    <description>Welco Company Calendar Object</description>
    <label>Sales Trips</label>
    <nameField>
        <label>Sales Trips Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Trips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>