force-app/main/default/objects/Sales_Trips__c/fields/Inactive_User__c.field-meta.xml
<CustomField>
    <fullName>Inactive_User__c</fullName>
    <description>Picklist used to filter the user</description>
    <label>Inactive User</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Inactive__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anna Thai</fullName>
            </value>
            <value>
                <fullName>Ashley Goodman</fullName>
            </value>
            <value>
                <fullName>Carolyn McCutcheon</fullName>
            </value>
            <value>
                <fullName>Christopher Ballem</fullName>
            </value>
            <value>
                <fullName>Constance Chung</fullName>
            </value>
            <value>
                <fullName>Darren Carefoot</fullName>
            </value>
            <value>
                <fullName>Farima Lari</fullName>
            </value>
            <value>
                <fullName>Harold Jaekel</fullName>
            </value>
            <value>
                <fullName>Jasmine Rattanaviboun</fullName>
            </value>
            <value>
                <fullName>Jim Goodridge</fullName>
            </value>
            <value>
                <fullName>Jim Woolford</fullName>
            </value>
            <value>
                <fullName>Kaitlin Cormier</fullName>
            </value>
            <value>
                <fullName>Kristen Goddard</fullName>
            </value>
            <value>
                <fullName>Lauren Spierenburg</fullName>
            </value>
            <value>
                <fullName>Melissa McDicken</fullName>
            </value>
            <value>
                <fullName>Mike Bailey</fullName>
            </value>
            <value>
                <fullName>Rebekah Burgeson</fullName>
            </value>
            <value>
                <fullName>Ron Nock</fullName>
            </value>
            <value>
                <fullName>Sara Marshall</fullName>
            </value>
            <value>
                <fullName>Tyson Karmin</fullName>
            </value>
            <value>
                <fullName>Venky Narayan</fullName>
            </value>
            <value>
                <fullName>Wanda Seeley</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>