force-app/main/default/objects/Sales_Trips__c/fields/Trip_Agenda__c.field-meta.xml
<CustomField>
    <fullName>Trip_Agenda__c</fullName>
    <description>Description of Trip Agenda</description>
    <label>Trip Agenda</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>