force-app/main/default/objects/Sales_Trips__c/listViews/My_Sales_TripsThisWeek.listView-meta.xml
<ListView>
    <fullName>My_Sales_TripsThisWeek</fullName>
    <columns>NAME</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Start__c</field>
        <operation>lessOrEqual</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>End__c</field>
        <operation>greaterOrEqual</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>My Sales Trips This Week</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>